xkb: use the correct device instead of an uninitialised "dev". #15614

X.Org Bug 15614 <http://bugs.freedesktop.org/show_bug.cgi?id=15614>

Signed-off-by: Peter Hutterer <peter@cs.unisa.edu.au>